unpackaged/main/default/objects/EventLog_Archive__c/EventLog_Archive__c.object-meta.xml
<CustomObject>
    <label>EventLog_Archive</label>
    <nameField>
        <label>EventLog_Archive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EventLog_Archives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>