unpackaged/main/default/objects/EventLog_Archive__c/fields/API_FAMILY__c.field-meta.xml
<CustomField>
    <fullName>API_FAMILY__c</fullName>
    <label>API_FAMILY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>