unpackaged/main/default/objects/EventLog_Archive__c/fields/API_RESOURCE__c.field-meta.xml
<CustomField>
    <fullName>API_RESOURCE__c</fullName>
    <label>API_RESOURCE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>