unpackaged/main/default/objects/EventLog_Archive__c/fields/API_VERSION__c.field-meta.xml
<CustomField>
    <fullName>API_VERSION__c</fullName>
    <label>API_VERSION</label>
    <length>10</length>
    <type>Text</type>
</CustomField>