unpackaged/main/default/objects/EventLog_Archive__c/fields/CLIENT_IP__c.field-meta.xml
<CustomField>
    <fullName>CLIENT_IP__c</fullName>
    <label>CLIENT_IP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>