unpackaged/main/default/objects/EventLog_Archive__c/fields/CLIENT_NAME__c.field-meta.xml
<CustomField>
    <fullName>CLIENT_NAME__c</fullName>
    <label>CLIENT_NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>