unpackaged/main/default/objects/EventLog_Archive__c/fields/CONNECTED_APP_ID__c.field-meta.xml
<CustomField>
    <fullName>CONNECTED_APP_ID__c</fullName>
    <label>CONNECTED_APP_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>