unpackaged/main/default/objects/EventLog_Archive__c/fields/COUNTS_AGAINST_API_LIMIT__c.field-meta.xml
<CustomField>
    <fullName>COUNTS_AGAINST_API_LIMIT__c</fullName>
    <label>COUNTS_AGAINST_API_LIMIT</label>
    <length>10</length>
    <type>Text</type>
</CustomField>