unpackaged/main/default/objects/EventLog_Archive__c/fields/ENTITY_NAME__c.field-meta.xml
<CustomField>
    <fullName>ENTITY_NAME__c</fullName>
    <label>ENTITY_NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>