unpackaged/main/default/objects/EventLog_Archive__c/fields/EVENT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>EVENT_TYPE__c</fullName>
    <label>EVENT TYPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>