unpackaged/main/default/objects/EventLog_Archive__c/fields/HTTP_METHOD__c.field-meta.xml
<CustomField>
    <fullName>HTTP_METHOD__c</fullName>
    <label>HTTP_METHOD</label>
    <length>50</length>
    <type>Text</type>
</CustomField>