unpackaged/main/default/objects/EventLog_Archive__c/fields/ORGANIZATION_ID__c.field-meta.xml
<CustomField>
    <fullName>ORGANIZATION_ID__c</fullName>
    <label>ORGANIZATION_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>