unpackaged/main/default/objects/EventLog_Archive__c/fields/REQUEST_ID__c.field-meta.xml
<CustomField>
    <fullName>REQUEST_ID__c</fullName>
    <label>REQUEST ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>