unpackaged/main/default/objects/EventLog_Archive__c/fields/STATUS_CODE__c.field-meta.xml
<CustomField>
    <fullName>STATUS_CODE__c</fullName>
    <label>STATUS_CODE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>