unpackaged/main/default/objects/EventLog_Archive__c/fields/TIMESTAMP__c.field-meta.xml
<CustomField>
    <fullName>TIMESTAMP__c</fullName>
    <label>TIMESTAMP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>