unpackaged/main/default/objects/EventLog_Archive__c/fields/TIMESTAMP_DERIVED__c.field-meta.xml
<CustomField>
    <fullName>TIMESTAMP_DERIVED__c</fullName>
    <label>TIMESTAMP_DERIVED</label>
    <length>50</length>
    <type>Text</type>
</CustomField>